[gd_scene load_steps=3 format=3 uid="uid://buj5786flbudf"]

[ext_resource type="Theme" uid="uid://bo2twnfsdq0mu" path="res://addons/gddialog/resources/res-ui-dialog-node-options-theme.tres" id="1_nf54c"]
[ext_resource type="Script" path="res://addons/gddialog/ui/ui_dialog_editor/ui_popup_edit_dialog_node/ui_dialog_node_options/ui_dialog_node_options_var/ui_dialog_node_options_if_var/ui-dialog-node-options-if-var.gd" id="1_xwpn5"]

[node name="UIDialogNodeOptionsIfVar" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("1_nf54c")
theme_override_constants/separation = 5
script = ExtResource("1_xwpn5")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Editing If Variable Node"
horizontal_alignment = 1

[node name="HBCVarTypeOptions" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBCVarTypeOptions"]
layout_mode = 2
text = "Variable Type:"

[node name="OptionButtonVarType" type="OptionButton" parent="HBCVarTypeOptions"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 4
selected = 0
popup/item_0/text = "Flag"
popup/item_0/id = 0
popup/item_1/text = "String"
popup/item_1/id = 1
popup/item_2/text = "Float"
popup/item_2/id = 2
popup/item_3/text = "String Array"
popup/item_3/id = 3

[node name="HBCVarOptions" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBCVarOptions"]
layout_mode = 2
text = "Variable:"

[node name="OptionButtonVariable" type="OptionButton" parent="HBCVarOptions"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonDecConditions" type="Button" parent="HBCVarOptions"]
visible = false
layout_mode = 2
text = " - "

[node name="ButtonIncConditions" type="Button" parent="HBCVarOptions"]
visible = false
layout_mode = 2
text = " + "

[connection signal="item_selected" from="HBCVarTypeOptions/OptionButtonVarType" to="." method="_on_option_button_var_type_item_selected"]
[connection signal="pressed" from="HBCVarOptions/ButtonDecConditions" to="." method="_on_button_dec_conditions_pressed"]
[connection signal="pressed" from="HBCVarOptions/ButtonIncConditions" to="." method="_on_button_inc_conditions_pressed"]
